[gd_scene load_steps=16 format=3 uid="uid://bxjdhh2cf1jes"]

[ext_resource type="Script" path="res://scenes/Screens/main_menu/main_menu_screen.gd" id="1_6052e"]
[ext_resource type="Texture2D" uid="uid://bkjrk0a2bdk5j" path="res://assets/assets/art/ui/mainmenu/menu-background.png" id="1_vpc7r"]
[ext_resource type="Texture2D" uid="uid://dmtowe45niswk" path="res://assets/assets/art/ui/mainmenu/title.png" id="2_1kvax"]
[ext_resource type="Texture2D" uid="uid://u4qkllv70de8" path="res://assets/assets/art/ui/mainmenu/menu-mask.png" id="3_3hhrx"]
[ext_resource type="Texture2D" uid="uid://b1f64lix3gjxk" path="res://assets/assets/art/ui/mainmenu/layout-p1.png" id="4_rsjqn"]
[ext_resource type="Texture2D" uid="uid://bgunjlegtclvt" path="res://assets/assets/art/ui/mainmenu/layout-p2.png" id="5_jxl0d"]
[ext_resource type="Texture2D" uid="uid://e3bl41n7en73" path="res://assets/assets/art/ui/mainmenu/1-player-selected.png" id="6_twqbo"]
[ext_resource type="Texture2D" uid="uid://dk7ynbd1rmptk" path="res://assets/assets/art/ui/mainmenu/2-players.png" id="7_sxcpl"]
[ext_resource type="Texture2D" uid="uid://b45qeinyfpv1y" path="res://assets/assets/art/ui/mainmenu/ball-selection.png" id="8_jbtsm"]

[sub_resource type="Animation" id="Animation_cgeyw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background/TitleTexture:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(25, 20)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Background/SinglePlayerTexture:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(35, 100)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Background/TwoPlayersTexture:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(35, 125)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Background/Mask:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(141, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Background/PlayerOneControls:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Background/PlayerTwoControls:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Background/SelectionIcon:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_oyts6"]
resource_name = "start"
length = 1.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background/TitleTexture:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(25, -70), Vector2(25, 20)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Background/SinglePlayerTexture:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-150, 100), Vector2(35, 100)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Background/TwoPlayersTexture:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.6, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-150, 125), Vector2(35, 125)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Background/Mask:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.5, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(141, 180), Vector2(141, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Background/PlayerOneControls:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.8, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Background/PlayerTwoControls:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.9, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Background/SelectionIcon:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(1, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/7/type = "method"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(1.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"on_start_animation_finished"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0i75m"]
_data = {
"RESET": SubResource("Animation_cgeyw"),
"start": SubResource("Animation_oyts6")
}

[sub_resource type="Animation" id="Animation_4h78n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background/SelectionIcon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_c6hhf"]
resource_name = "rotate"
length = 0.2
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background/SelectionIcon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0.0, 1.5708, 3.14159, 4.71239]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nnqy0"]
_data = {
"RESET": SubResource("Animation_4h78n"),
"rotate": SubResource("Animation_c6hhf")
}

[node name="MainMenuScreen" type="Node"]
script = ExtResource("1_6052e")
music = 2

[node name="Background" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_vpc7r")

[node name="TitleTexture" type="TextureRect" parent="Background"]
layout_mode = 1
offset_left = 25.0
offset_top = 20.0
offset_right = 164.0
offset_bottom = 85.0
texture = ExtResource("2_1kvax")

[node name="Mask" type="TextureRect" parent="Background"]
modulate = Color(0, 0, 0, 0.784314)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -139.0
offset_bottom = 180.0
grow_horizontal = 0
texture = ExtResource("3_3hhrx")

[node name="PlayerOneControls" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -90.0
offset_top = -100.0
offset_right = -8.0
offset_bottom = -60.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("4_rsjqn")

[node name="PlayerTwoControls" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -90.0
offset_top = -50.0
offset_right = -8.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("5_jxl0d")

[node name="SinglePlayerTexture" type="TextureRect" parent="Background"]
unique_name_in_owner = true
layout_mode = 1
offset_left = 35.0
offset_top = 100.0
offset_right = 177.0
offset_bottom = 121.0
texture = ExtResource("6_twqbo")
stretch_mode = 2

[node name="TwoPlayersTexture" type="TextureRect" parent="Background"]
unique_name_in_owner = true
layout_mode = 1
offset_left = 35.0
offset_top = 125.0
offset_right = 177.0
offset_bottom = 146.0
texture = ExtResource("7_sxcpl")
stretch_mode = 2

[node name="SelectionIcon" type="TextureRect" parent="Background"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 10.0
offset_top = 100.0
offset_right = 30.0
offset_bottom = 120.0
pivot_offset = Vector2(10, 10)
texture = ExtResource("8_jbtsm")

[node name="MenuAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0i75m")
}
autoplay = "start"

[node name="BallAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nnqy0")
}
autoplay = "rotate"
